# pytest-failure-tracker

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  black.toml  cliff.toml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.cfg  setup.py  test_results.json  tox.ini
.github/workflows/: codecov.yml
.pytest_tracker/: results.db
app/: index.html  script.js  styles.css
src/pytest_analytics/: db.py  plugin.py
src/pytest_failure_tracker/: db.py  plugin.py
tests/: example_test.py  test_db.py  test_failure_tracker.py  test_plugin.py
